# Stock-Assistant

./: .env  .gitignore  Makefile  package.json  基本操作.md  项目介绍.md
backend/: main.py  pyproject.toml
backend/app/: agent.py  config.py
backend/app/agents/deep_research/: agent.py  prompt.py
backend/app/agents/deep_research/sub_agents/: composer.py  critic.py  escalation_checker.py  planner.py  researcher.py
backend/app/agents/doc_qa/: agent.py  prompt.py
backend/app/agents/quick_answer/: agent.py  prompt.py
backend/app/agents/stock_research/: agent.py  prompt.py
backend/app/agents/stock_research/sub_agents/: data_analyst.py  risk_analyst.py  strategy_analyst.py
backend/app/agents/theme_research/: __init__.py  agent.py  prompt.py
backend/app/rag/: document_manager.py  vector_store.py
backend/app/tools/: rag_retrieval.py  tavily_search.py
backend/chroma_db/: chroma.sqlite3
docs/discovery/: 2026-03-16_eval_cases_v0.md  2026-03-16_hypothesis_ledger.md  2026-03-16_problem_discovery_brief.md  2026-03-16_validation_pack_v0.md
docs/prd/: 2026-03-16_edge_case_matrix.md  2026-03-16_metrics_table.csv  2026-03-16_vine_investment_research_prd.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityTimeline.tsx  ChatView.tsx  DocumentUpload.tsx  ResearchPlanApproval.tsx  SessionSidebar.tsx
frontend/src/pages/: LandingPage.tsx  Workspace.tsx
frontend/src/utils/: api.ts
my_agent/: agent.py
